Revision history for Perl module WebService::Discord::Webhook

1.10 2020-06-11

  * Updated webhook URL to new domain name.
  * Added "allowed_mentions" to execute() parameters.

1.00 2019-09-04

  * First release to CPAN.