@@ -73,7 +73,7 @@ Note that this will probably require a trusted CA certificate list installed.
 =item * wait
 
 Webhook execution will block before returning, until the server confirms that
-he message was sent.  By default this is disabled (webhook execution is NOT
+the message was sent.  By default this is disabled (webhook execution is NOT
 synchronized), so the function may return success although a message does not
 actually post.  See C<execute> for more details.
 
@@ -128,8 +128,7 @@ also cached as above.
 
 =head2 destroy
 
-Deletes the Webhook from the Discord service.  Returns True if successful,
-undef otherwise.
+Deletes the Webhook from the Discord service.  There is no return value.
 
 B<Warning!>  Once a Webhook is deleted, the existing token and ID are no
 longer valid.  A server administrator will need to re-create the endpoint
@@ -232,8 +231,8 @@ be a regular text message to post via the "content" method.
 The return value for this function depends on the setting of C<wait> during
 webhook construction.  If C<wait> is False (default), the function returns
 immediately: parameters are checked for validity, but no attempt is made to
-verify that the message actually posted to the channel.  The function will
-return True.
+verify that the message actually posted to the channel.  There is no return
+value in this case.
 
 If C<wait> is True, function return is delayed until the message successfully
 posts.  The return value in this case is a hashref containing details about
@@ -250,9 +249,9 @@ structure (will be encoded to JSON using C<JSON::PP>).
 More information about the format of a Slack webhook is available on the
 Slack API reference at L<https://api.slack.com/incoming-webhooks>.
 
-This function returns True on success, and is also affected by the value
-of C<wait>.  Typically a Slack webhook returns the string C<"ok"> on
-success.
+This function's return behavior is similar to C<execute()>, in that it is also
+affected by the value of C<wait>.  Typically a Slack webhook returns the string
+C<"ok"> on success.
 
 =head2 execute_github
 
@@ -266,14 +265,41 @@ C<X-GitHub-Event> header.
 More information about the format of a Github webhook is available on the
 Github API reference at L<https://developer.github.com/webhooks>.
 
+This function's return behavior is similar to C<execute()>, in that it is also
+affected by the value of C<wait>.
+
 B<Note:>  Posting a message using the C<execute_github> function is currently
 a specially-cased feature of Discord.  The webhook always appears as a user
 named "GitHub" with a custom avatar, ignoring any existing styling.  Thus, it
 should NOT be used as a general-purpose posting function.  However, it may be
 useful to proxy messages from GitHub and repost them on Discord.
 
-This function returns True on success, and is also affected by the value
-of C<wait>.
+=head1 ERRORS
+
+All errors in WebService::Discord::Webhook are handled by throwing exceptions
+using C<croak()>.  This includes both local errors (e.g. invalid parameters)
+as well as remote service errors (e.g. upload too large, name invalid).
+
+Errors are returned as a single string.  Some attempt is made to standardize
+the wording, so that they can be parsed by regex if the caller wants to inspect
+the error and retry or continue.
+
+If you wish to trap errors, the traditional Perl way to catch the exceptions is
+to wrap them in an C<eval> block, as in:
+
+    my $result = eval {
+        $webhook->execute(...);
+    };
+
+    if ($@) {
+        # do something with the error here
+        warn "Execute failed with error: $@";
+    }
+
+    # execution continues...
+
+Also consider using L<Try::Tiny>, which provides the familiar C<try> / C<catch>
+constructs to help with exception handling.
 
 =head1 LICENSE
 
